2005-02-23  Emmanuel Dreyfus <manu@netbsd.org>

        * configure.ac, src/racoon/{Makefile.am|crypto_openssl.c}: optionnal
	  support for patented algorithms: IDEA and RC5.
	* src/racoon/{isakmp_xauth.c|main.c}: don't initialize RADIUS if it
	  is not required in the configuration
	* src/racoon/isakmp.c: do not reject addresses for which kernel
	  refused UDP encapsulation, they can still be used for non NAT-T
	  traffic (eg: NAT-T enabled racoon on non NAT-T enabled kernel)

2005-02-18  Emmanuel Dreyfus <manu@netbsd.org>

        * src/racoon/{main.c|eaytest.c|plairsa-gen.c}
	  src/setkey/setkey.c: don't use fuzzy paths for package_version.h

2005-02-18  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/isakmp_inf.c: Purge generated SPDs when getting a
	  related DELETE_SA
	* src/racoon/pfkey.c: do NOT unbindph12() when SA acquire

2005-02-17  Emmanuel Dreyfus <manu@netbsd.org>

	From Fred Senault <fred.letter@lacave.net>
	* src/racoon/remoteconf.c: Fix a bug in script init

2005-02-17  Yvan Vanhullebus  <vanhu@free.fr>

	* src/racoon/ipsec_doi.c: Workaround for phase1 lifetime checks

2005-02-15  Michal Ludvig  <michal@logix.cz>

	* configure.ac: Changed --enable-natt_NN to --enable-natt-versions=NN,NN

---------------------------------------------

	Branch for 0.6 created (ipsec-tools-0_6-branch)

2005-02-11  Emmanuel Dreyfus <manu@netbsd.org>

	From Jason Thorpe  <thorpej@netbsd.org>
	* src/raccon/samples/racoon.conf.sample-gssapi
	  src/racoon/{cfparse.y|cftoken.l|gssapi.c|gssapi.h|ipsec_doi.c}
	  src/racoon/{localconf.c|localconf.h|racoon.conf.5}
	  configure.ac: Multiple GSSAPI fixes to get interoperability 
	  with Microsoft IKE. 

2005-02-09  Emmanuel Dreyfus <manu@netbsd.org>

	* src/racoon/{cfparse.y|isakmp_cfg.c|isakmp_cfg.h|isakmp_xauth.c}
	  src/racoon/{isakmp_xauth.h|main.c|privsep.c|privsep.h}
	  src/racoon/racoon.conf.5: Make PAM work with privilege separation

2005-02-07  Michal Ludvig  <michal@logix.cz>

	From Krisztian Kovacs: