@@ -1,6 +1,6 @@
-.\"	$NetBSD: racoonctl.8,v 1.1.1.2 2005/02/23 14:54:26 manu Exp $
+.\"	$NetBSD: racoonctl.8,v 1.1.1.3 2005/02/24 20:53:56 manu Exp $
 .\"
-.\" Id: racoonctl.8,v 1.2 2004/11/21 16:46:53 manubsd Exp
+.\" Id: racoonctl.8,v 1.2.4.1 2005/02/24 18:04:42 manubsd Exp
 .\"
 .\" Copyright (C) 2004 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -98,7 +98,10 @@ to increase verbosity.
 .It flush-sa Op isakmp|esp|ah|ipsec
 is used to flush all SA if no SA class is provided, or a class of SA, 
 either ISAKMP SA, IPsec ESP SA, or IPsec AH SA, or all IPsec SA.
-.It establish-sa Oo Fl u Ar username Oc Ar saopts
+.It Xo establish-sa 
+.Oo Fl u Ar username 
+.Oc Ar saopts
+.Xc
 Establish a SA, either a ISAKMP SA, IPsec ESP SA, or IPsec AH SA. The 
 optionnal 
 .Fl u Ar username
@@ -115,7 +118,10 @@ can have the following formats:
 .It {esp|ah} {inet|inet6} Ar src/prefixlen/port Ar dst/prefixlen/port
 {icmp|tcp|udp|any}
 .El
-.It vpn-connect Oo Fl u Ar username Oc Ar vpn_gateway
+.It Xo vpn-connect 
+.Oo Fl u Ar username 
+.Oc Ar vpn_gateway
+.Xc
 This is a particular case of the previous command. It will establish an ISAKMP
 SA with
 .Ar vpn_gateway .
@@ -138,35 +144,26 @@ awaiting and reporting new events.
 .El
 .Pp
 Command shortcuts are available:
-.Bl -tag
-.It rc 
-reload-config
-.It ss 
-show-sa
-.It sc 
-show-schedule
-.It fs 
-flush-sa
-.It ds 
-delete-sa
-.It es 
-establish-sa
-.It vc 
-vpn-connect
-.It vd 
-vpn-disconnect
-.It se
-show-event
+.Bl -tag -width Bl
+.It rc reload-config 
+.It ss show-sa 
+.It sc show-schedule
+.It fs flush-sa
+.It ds delete-sa
+.It es establish-sa
+.It vc vpn-connect
+.It vd vpn-disconnect
+.It se show-event
 .El
 .\"
 .Sh RETURN VALUES
 The command should exit with 0 on success, and non-zero on errors.
 .\"
 .Sh FILES
-.Bl -tag 
-.It Pa /var/racoon/racoon.sock
-.Xr racoon 8 
-control socket.
+.Bl -tag -width Bl
+.It Pa /var/racoon/racoon.sock or Pa /var/run/racoon.sock 
+.Xr racoon 8
+control socket. 
 .El
 .\"
 .Sh SEE ALSO
@@ -176,6 +173,7 @@ control socket.
 Once was 
 .Xr kmpstat 8 
 in the KAME project. It turned into 
-.Xr racoonctl 8 but remained undocumented for a while. 
+.Xr racoonctl 8 
+but remained undocumented for a while. 
 .An Emmanuel Dreyfus Aq manu@netbsd.org
 wrote this man page.
